<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Accedi"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/row_background"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="Username"
        android:padding="15dp"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/row_background"
        android:drawableLeft="@drawable/baseline_security_24"
        android:drawablePadding="15dp"
        android:hint="Password"
        android:padding="15dp"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="70dp" />


    <LinearLayout
        android:id="@+id/layout_bottone_registrati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/non_hai_un_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non hai un account?"
            android:textSize="18dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/sign_up_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Registrati"
            android:textSize="18dp"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>



</RelativeLayout>